surefire plugin bumped up to current version opens command line arguments added for tests JavaDoc comment was fixed maven test directory that remained there by accident was deleted